fix(db): implement user authentication with hashed passwords
Added db.server.ts file to create a Prisma client instance
Implemented user repository with CRUD operations (create, read, update, delete)
Updated utils/utils.ts to include hash and verify password functions
Migrated User table to store password hash instead of plain password
Created additional migration scripts to add and remove passwordHash column
Refactored User model to use passwordHash instead of password

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
     "start": "remix-serve ./build/server/index.js",
     "typecheck": "tsc",
-    "migrate": "npx prisma migrate dev --name init"
+    "generate:migration": "printf 'Enter migration name: ' && read migrationName && prisma migrate dev --name $migrationName && npx prisma generate"
   },
   "dependencies": {
     "@prisma/client": "^5.17.0",
