--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@remix-run/react": "^2.10.2",
     "@remix-run/serve": "^2.10.2",
     "bootstrap": "^5.3.3",
+    "cloudinary": "^2.3.0",
+    "highlight.js": "^11.10.0",
     "isbot": "^4.1.0",
     "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.402.0",
@@ -24,6 +26,7 @@
     "react-bootstrap": "^2.10.4",
     "react-bootstrap-sidebar-menu": "^2.0.3",
     "react-dom": "^18.2.0",
+    "react-markdown": "^9.0.1",
     "tiny-invariant": "^1.3.3"
   },
   "devDependencies": {
