--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "devDependencies": {
     "@remix-run/dev": "^2.10.2",
+    "@types/date-fns": "^2.6.0",
     "@types/lodash.debounce": "^4.0.9",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
